output160270_4294967294.txt
./logs
Environment:
	Python: 3.11.3
	PyTorch: 2.0.0+cu117
	Torchvision: 0.15.1+cu117
	CUDA: 11.7
	CUDNN: 8500
	NumPy: 1.24.3
	PIL: 9.5.0
Args:
	algorithm: APLCLIP
	checkpoint_freq: None
	data_dir: /home/zhongyi.han/dataset
	dataset: VLCS
	holdout_fraction: 0.2
	hparams: {"clip_backbone": "ViT-B/16"}
	hparams_seed: 0
	output_dir: ./logs
	save_model_every_checkpoint: False
	seed: 0
	skip_model_save: False
	steps: None
	task: domain_generalization
	test_envs: [0]
	trial_seed: 0
	uda_holdout_fraction: 0
HParams:
	backbone: clip
	batch_size: 32
	class_balanced: False
	clip_backbone: ViT-B/16
	clip_transform: True
	data_augmentation: True
	lr: 0.0001
	mlp_depth: 3
	mlp_dropout: 0.1
	mlp_width: 512
	momentum: 0.1
	nonlinear_classifier: False
	num_domain_tokens: 16
	resnet18: False
	resnet_dropout: 0.0
	test_envs: [0]
	weight_decay: 0.0
Using clip_transform ViT-B/16
Set self.clip_model.parameters.reguires_grad = False!
Set self.clip_model.parameters.reguires_grad = False!
Initial context: "a photo of a"
Number of context words (tokens): 4
class_loss    disc_loss     env0_in_acc   env0_out_acc  env1_in_acc   env1_out_acc  env2_in_acc   env2_out_acc  env3_in_acc   env3_out_acc  epoch         step          step_time    
7.1835179329  1.1300520897  0.1033568905  0.1024734982  0.1430588235  0.1412429379  0.2650418888  0.2515243902  0.1643835616  0.1748148148  0.0000000000  0             1.9365932941 
5.4787753987  0.9497451985  0.3507067138  0.3639575972  0.5247058824  0.5743879473  0.3964204113  0.4024390244  0.4250277675  0.4355555556  8.4805653710  300           0.7319967651 
5.2049152438  0.7581645449  0.3816254417  0.3604240283  0.5529411765  0.5706214689  0.4455445545  0.4466463415  0.4842650870  0.4859259259  16.961130742  600           0.7343308703 
4.9681543628  0.6528004076  0.4496466431  0.4593639576  0.5905882353  0.6158192090  0.4889565880  0.5000000000  0.5220288782  0.5244444444  25.441696113  900           0.7338473304 
4.8898808090  0.5991182963  0.4673144876  0.4522968198  0.6385882353  0.6685499058  0.5544554455  0.5137195122  0.5920029619  0.5792592593  33.922261484  1200          0.7346624581 
4.7400818086  0.5821551024  0.5114840989  0.5335689046  0.6320000000  0.6591337100  0.5993907083  0.5716463415  0.6305072195  0.6237037037  42.402826855  1500          0.7342209919 
4.6180046328  0.5612115141  0.4611307420  0.4840989399  0.6494117647  0.6666666667  0.6485148515  0.6158536585  0.6767863754  0.6711111111  50.883392226  1800          0.7337494946 
4.6028417397  0.5552866717  0.5106007067  0.5512367491  0.6762352941  0.6949152542  0.6706016756  0.6310975610  0.6878933728  0.6992592593  59.363957597  2100          0.7339239081 
4.5197190261  0.5494197602  0.5538869258  0.5865724382  0.6828235294  0.7005649718  0.6904036558  0.6539634146  0.7038134024  0.7140740741  67.844522968  2400          0.7339121215 
4.4485656238  0.5436042821  0.5671378092  0.6183745583  0.6950588235  0.7118644068  0.6995430312  0.6722560976  0.7152906331  0.7377777778  76.325088339  2700          0.7339740523 
4.4344950374  0.5452619402  0.5450530035  0.5689045936  0.7096470588  0.7288135593  0.6991622239  0.6722560976  0.7256571640  0.7392592593  84.805653710  3000          0.7328858081 
4.3653790847  0.5468059942  0.5547703180  0.5759717314  0.7082352941  0.7231638418  0.7109672506  0.6996951220  0.7312106627  0.7407407407  93.286219081  3300          0.7330329855 
4.4529677375  0.5563879795  0.6121908127  0.6607773852  0.7091764706  0.7344632768  0.7261995430  0.7179878049  0.7471306923  0.7644444444  101.76678445  3600          0.7332720502 
4.3940454094  0.5629235759  0.5671378092  0.5936395760  0.7101176471  0.7457627119  0.7155369383  0.7073170732  0.7363939282  0.7481481481  110.24734982  3900          0.7340543056 
4.3371909269  0.5567713130  0.5459363958  0.5759717314  0.7209411765  0.7476459510  0.7220106626  0.7195121951  0.7449092929  0.7555555556  118.72791519  4200          0.7338553063 
4.3174291714  0.5657065803  0.5194346290  0.5229681979  0.7261176471  0.7627118644  0.7044935263  0.6905487805  0.7119585339  0.7244444444  127.20848056  4500          0.7341235884 
4.3349685335  0.5606279722  0.5733215548  0.6219081272  0.7312941176  0.7570621469  0.7349581112  0.7210365854  0.7449092929  0.7585185185  135.68904593  4800          0.7341883381 
4.3373371100  0.5621634090  0.5238515901  0.5371024735  0.7350588235  0.7683615819  0.7239146992  0.7042682927  0.7212143650  0.7333333333  141.34275618  5000          0.7334323812 
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/home/zhongyi.han/project/APLCLIP/domainbed/scripts/train.py", line 21, in <module>
    from domainbed import algorithms
  File "/home/zhongyi.han/project/APLCLIP/domainbed/algorithms.py", line 188
    distences_per_image = 
                          ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/home/zhongyi.han/project/APLCLIP/domainbed/scripts/train.py", line 21, in <module>
    from domainbed import algorithms
  File "/home/zhongyi.han/project/APLCLIP/domainbed/algorithms.py", line 188
    distences_per_image = 
                          ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/home/zhongyi.han/project/APLCLIP/domainbed/scripts/train.py", line 21, in <module>
    from domainbed import algorithms
  File "/home/zhongyi.han/project/APLCLIP/domainbed/algorithms.py", line 188
    distences_per_image = 
                          ^
SyntaxError: invalid syntax
